made a gaming news page

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,101 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Gamers Den</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+</head>
+
+<header>
+  <!-- Some kind of logo and navbar -->
+  <div class="img">
+  <img class="banner" src="https://img.icons8.com/stickers/200/000000/super-mario.png" alt="super-mario"/>
+</div>
+  <C><h1>Gamers Den</h1>
+  </C>
+  <nav>
+    <a class="links">
+      <a
+        href="#">News</a>
+      </div>
+      <a
+        href="#">About us</a>
+      </div>
+      <a
+        href="#">Contact</a>
+      </div>
+      <a
+        href="#">Log in</a>
+      </div>
+
+  </nav>
+</header>
+</header>
+
+<!-- The big news content -->
+
+<section class="flex-parent">
+  <div class="flex-child one">
+    <img class="photo-1" src="/images/multiversus.jpg"
+      alt="multiversus">
+    <h3>New fighting game from WB</h3>
+    <p>Learn about the new fightning game from WB called "Multiversus".</p>
+  </div>
+
+
+
+</section>
+
+<!-- The other news -->
+
+<section class="cards">
+
+  <figure>
+    <div class="card">
+      <img class="mario-golf" src="/images/mario-golf.jpg" alt="Mario golf">
+      <h3>Golf with Mario!</h3>
+      <p>Click here to read more about the new Mario golfing game!</p>
+    </div>
+  </figure>
+
+  <figure>
+    <div class="card">
+      <img class="saints-row" src="/images/saints-row.png" alt="Saints Row">
+      <h3>Saints Row!</h3>
+      <p>Click here to read more about the new upcoming Saints Row game!</p>
+     
+    </div>
+  </figure>
+
+  <figure>
+    <div class="card">
+
+      <img class="spiderman" src="/images/spiderman.png" alt="Spiderman">
+      <h3>Spiderman remastered!</h3>
+      <p>Click here to read more about the new remastered spiderman game!</p>
+    </div>
+  </figure>
+
+  <figure>
+    <div class="card">
+      <img class="Hogwarts" src="/images/hogwarts.jpg" alt="Hogwarts Legacy">
+      <h3>Hogwarts Legacy!</h3>
+      <p>Click here to read more about the upcoming game set in the Harry Potter universe!</p>
+    </div>
+  </figure>
+
   </body>
+  </div>
+</section>
+
+<footer>
+
+  <h2>Created by: Emil Bergvik</h2>
+  <a href="https://www.github.com/emilbergvik">
+    <img class="Github" src="/images/github.png" width="40px" alt="Github Logo"></a>
+</footer>
+
 </html>
