-m made a gaming news page

--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@
 
 <section class="flex-parent">
   <div class="flex-child one">
-    <img class="photo-1" src="/code/images/multiversus.jpg"
+    <img class="photo-1" src="/code/multiversus.jpg"
       alt="multiversus">
     <h3>New fighting game from WB</h3>
     <p>Learn about the new fightning game from WB called "Multiversus".</p>
@@ -55,7 +55,7 @@
 
   <figure>
     <div class="card">
-      <img class="mario-golf" src="/code/images/mario-golf.jpg" alt="Mario golf">
+      <img class="mario-golf" src="/code/mario-golf.jpg" alt="Mario golf">
       <h3>Golf with Mario!</h3>
       <p>Click here to read more about the new Mario golfing game!</p>
     </div>
@@ -63,7 +63,7 @@
 
   <figure>
     <div class="card">
-      <img class="saints-row" src="/code/images/saints-row.png" alt="Saints Row">
+      <img class="saints-row" src="/code/saints-row.png" alt="Saints Row">
       <h3>Saints Row!</h3>
       <p>Click here to read more about the new upcoming Saints Row game!</p>
      
@@ -73,7 +73,7 @@
   <figure>
     <div class="card">
 
-      <img class="spiderman" src="/code/images/spiderman.png" alt="Spiderman">
+      <img class="spiderman" src="/code/spiderman.png" alt="Spiderman">
       <h3>Spiderman remastered!</h3>
       <p>Click here to read more about the new remastered spiderman game!</p>
     </div>
@@ -81,7 +81,7 @@
 
   <figure>
     <div class="card">
-      <img class="Hogwarts" src="/code/images/hogwarts.jpg" alt="Hogwarts Legacy">
+      <img class="Hogwarts" src="/code/hogwarts.jpg" alt="Hogwarts Legacy">
       <h3>Hogwarts Legacy!</h3>
       <p>Click here to read more about the upcoming game set in the Harry Potter universe!</p>
     </div>
@@ -95,7 +95,7 @@
 
   <h2>Created by: Emil Bergvik</h2>
   <a href="https://www.github.com/emilbergvik">
-    <img class="Github" src="/code/images/github.png" width="40px" alt="Github Logo"></a>
+    <img class="Github" src="/code/github.png" width="40px" alt="Github Logo"></a>
 </footer>
 
 </html>
