added codes iphone

--- a/code/index.html
+++ b/code/index.html
@@ -10,8 +10,7 @@
 
     <!--HEADER-->
     <div class="header">
-      <img src="italy.png" alt=logo"/>
-      <h1>BENVENUTI</h1>
+      <h1>🇮🇹 BENVENUTI</h1>
     </div>
     
     
