Fix grammar in article

--- a/code/index.html
+++ b/code/index.html
@@ -91,7 +91,7 @@
             />
           </div>
           <div class="article-content">
-            <h1>*kitty eyes* does work</h1>
+            <h1>*kitty eyes* work</h1>
             <p>
               A recent study suggests that the most effective ways of convincing
               your human to drop everything and give you cuddles is to be
