done with project

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,63 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
+
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div class="wrapper">
+      <nav class="navbar">
+        <ul>
+          <li>Home</li>
+          <li>News</li>
+          <li>Contact</li>
+          <li>About</li>
+        </ul>
+      </nav>
 
-    <section class="big-news">
-      <!-- The big news content -->
+   <header class="h-title">planted</header>
+
+    <section class="main-news">
+      <h1 class="main-heading">The best tips for a small balcony</h1>
+      <p class="body-text"><i><b>How to utilize a small space with <a href="https://www.gardenersworld.com/plants/best-plants-for-balconies/">gorgeous plants</a></i></b>
+        Having a balcony is a luxury, and even though yours might not be as <i>big</i> as you'd wish, do not worry. I have found some great tips on how to make the best out
+        of the space that you have, so that you can enjoy the greenest possible mini-outdoors.</p>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="news-2">
+      <h1 class="other-heading">Uninvited guests?</h2>
+      <p class="body-text"><i><b>Here are the best ways to get rid of pests</b></i> Having plants indoors are a great way to uplift any room,
+         but when summer comes around there are some things we don't want to come live in our houses. Scales, mealybugs and other flying pests that feast on our plants are sometimes difficult 
+         and frustrating to get rid of. Here are some helpful tips on how to get rid of them. Click here to find out more:</p>
+      <a href="https://www.bhg.com/gardening/houseplants/care/common-houseplant-pests/">Link</a>
     </section>
+
+    <section class="news-3">
+      <h1 class="other-heading">Different pots for different plants</h2>
+      <p class="body-text"><i><b>Plastic, ceramic or metal?</b></i> When planning your next plant purchase, it's not only the amount of sunlight it needs that you have to consider; different plants 
+        like different pots. The different materials also mean that they soak up water differently, and some plants might thrive in one type of pot and shrivel and die in others. Dramatic much? No need to worry. 
+        Click <a href="https://www.thesill.com/blog/how-to-choose-right-pot-houseplants">here</a> to find the best pot for your plant.</p>
+    </section>
+
+    <section class="news-4">
+      <h1 class="other-heading">No-sunlight survivors</h2>
+      <p class="body-text"><i><b>Having plants can be tricky during winter</b></i> in Sweden, we are not exactly blessed with sunlight all year round. In fact, we spend most of our lives in the darkness of fall
+         and winter, which impacts the plants we have in our homes. Maybe you won't be able to grow tomatoes in november, but there are some plants that can survive months without direct sunlight. Here are some of them!</p>       
+      </section>
+    
+    <section class="news-5">
+      <h1 class="other-heading">The best flower shops in Malmö</h2>
+      <p class="body-text"><i><b>From Oasen to Wallflower,</b></i>  there are many gorgeous shops where you can get your plant shopping going. Read some of our best tips here, and why we love them.</p>
+    </section>
+
+    <section class="images">
+      <img class="img1" src="./images/balkong.png">
+      <img class="img2" src="./images/myror.png">
+      <img class="img3" src="./images/krukor.png">
+    </section>
+
   </body>
 </html>
