Relative links update

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section class="articles">
             <div class="article 1">
-              <img src="https://assets.codepen.io/8007097/unicorn1_1.jpg">
+              <img src="unicorn1_1.jpg">
                 <h4>Unicorn sleeping patterns</h4>
              Little did you know, they are nocturnal little (big?) creatures</p>
                   <button> >>></button>  
