--- a/index.html
+++ b/index.html
@@ -39,50 +39,50 @@
 
         <section class="articles">
             <div class="article 1">
-              <img src="unicorn1_1.jpg">
+              <img src="/unicorn1_1.jpg">
                 <h4>Unicorn sleeping patterns</h4>
              Little did you know, they are nocturnal little (big?) creatures</p>
                   <button> >>></button>  
                  
               </div>
               <div class="article 2">
-                 <img src="unicorn2_1.jpg">
+                 <img src="/unicorn2_1.jpg">
                 <h4>Danish Crown</h4>
                 <p>The Throne Chair of Denmark is made of unicorn horn. It's surprisingly comfortable.</p>
               <button>>>></button>
               </div>
               <div class="article 3">
-                 <img src="unicorn3_1.jpg">
+                 <img src="/unicorn3_1.jpg">
                 <h4>Watch out Mutts</h4>
                 <p>Unicorns are afraid of Labradors and have been known to attack them</p>
               <button>>>></button>
               </div>
               <div class="article 4">
-                 <img src="unicorn4_1.png">
+                 <img src="/unicorn4_1.png">
                 <h4>Tricky little ones - Unicorns</h4>
                 <p>Unicorns are notoriously hard to catch - which is probably why we see so few of them.</p>
               <button>>>></button>
           </div>
             <div class="article 5">
-                <img src="unicorn1_1.jpg">
+                <img src="/unicorn1_1.jpg">
                 <h4>Unicorn sleeping patterns</h4>
               <p>Little did you know, they are nocturnal little (big?) creatures</p>
                   <button>>>></button>  
           </div>
               <div class="article 6">
-                 <img src="unicorn2_1.jpg">
+                 <img src="/unicorn2_1.jpg">
                 <h4>Danish Crown</h4>
                 <p>The Throne Chair of Denmark is made of unicorn horn. It's surprisingly comfortable.</p>
               <button>>>></button>
           </div>
               <div class="article 7">
-                 <img src="unicorn3_1.jpg">
+                 <img src="/unicorn3_1.jpg">
                 <h4>Watch out Mutts</h4>
                 <p>Unicorns are afraid of Labradors and have been known to attack them</p>
               <button>>>></button>
           </div>
               <div class="article 8">
-                 <img src="unicorn4_1.png">
+                 <img src="/unicorn4_1.png">
                 <h4>Tricky little ones - Unicorns</h4>
                 <p>Unicorns are notoriously hard to catch - which is probably why we see so few of them.</p>
               <button>>>></button>
