--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <div class="big-news-story">
                 <h1>THEY HAVE FINALLY ARRIVED - UNICORNS!!</h1>
-              <p>
+              <p class="main-story">
               Latest news about the whereabouts of our devious little (big!) friends. A new siting has been made in southern Germany.
               </p>
               <button>Read all about it!</button>
@@ -41,7 +41,7 @@
             <div class="article 1">
               <img src="unicorn1.jpg">
                 <h4>Unicorn sleeping patterns</h4>
-             Little did you know, they are nocturnal little (big?) creatures</p>
+             <p>Little did you know, they are nocturnal little (big?) creatures</p>
                   <button> >>></button>  
                  
               </div>
