--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             and since Java is similar to C# i created a class that makes it clickable with links
             to my subpages. -->
         <section class="layout-header">
-            <div class="logo"><img src="C:\Users\vikto\code2\logo2.png" style="width: 80px;height:85px";></div>   
+            <div class="logo"><img src="C\Users\vikto\code2\logo2.png" style="width: 80px;height:85px";></div>   
             <div class="site-name">PROPOSAL IDEAS</div>
             <div class="navigation">
                 <button onclick="myFunction()" class="dropbtn">
