added the html code

--- a/code/index.html
+++ b/code/index.html
@@ -2,23 +2,84 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <h1>hi</h1>
-      <!-- Some kind of logo and navbar -->
-      <p> Another try</p>
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+  <!-- Some kind of logo and navbar -->
+  <header>
+    <div class="logo">
+      <img src="https://static.thenounproject.com/png/4129058-200.png"/>
+        <h1 class="site">The climbers News</h1>
+    </div>
+        
+    <nav class="navbar">
+      <div class="navbar-links"><br>
+        <a href="#">ABOUT </a>
+        <a href="#">CONTACT</a>
+        <a href="#">HOME</a>
+      </div>
+      <br>
+      <div class="navbar-menu">
+        <div class="hamburger"></div>
+        <div class="hamburger"></div>
+        <div class="hamburger"></div>
+      </div>
+    </nav>    
+  </header>
+<!-- The big news content -->
+  <section class="big-news">
+  <div class="big-news-box">
+    <img src='https://images.pexels.com/photos/3077882/pexels-photo-3077882.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="climb-mountains">
+    <div class="text-box-1">
+    <h1>Studies show that climbing reduces stress!</h1>
+    <p>Ut enim ad ullamco laboris nisit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <button class="button">Read More</button>  
+  </div></div>
+  </section> 
+<!-- The other news  -->
+  <section class="news-items">
+  <div class="news-items-box">
+      <img src='https://images.pexels.com/photos/8729323/pexels-photo-8729323.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="people">
+      <div class="text-box-2">
+      <h2>Climbing in spain</h2>
+      <p>Ut eid est laborum. hueuhuheuuhduehduhed hudheuhduhed. huhe fedee uhduhed hudheuhdue jidejidjied</p>
+    </div>
+  </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <div class="news-items-box">
+    <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
+    <div class="text-box-2">
+    <h2>Do you have the right shoe?</h2>
+    <p>>Ut eid est laborum. hueuhuheudhue ihuehd huhdeuhduehd hudhhudhuehduhed hudheuhduhed
+      huhdeuhduhed hudheuhdue jidejidjied</p>
+    </div> 
+  </div>
+
+  <div class="news-items-box">
+    <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
+    <div class="text-box-2">
+    <h2>Go toprope!</h2>
+    <p>Ut eid est laborum. hueuhuheudhue ihehd huhdeuhduehd hudheuhduhed hudhuehduhed hudheuhduhed
+    huhdeuhduhed hudheuhdue jidejidjied</p>
+    </div>
+  </div>
+
+  <div class="news-items-box">
+    <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
+    <div class="text-box-2">
+    <h2>Scared of heights?</h2>
+    <p>Ut eid est laborum. hueuhuheudhue ihdhehduhue hduehudhuehduehd huhdeuhduehd hudheuhduhed hudhuehduhed hudheuhduhed
+    huhdeuhduhed hudheuhdue jidejidjied</p>
+    </div> 
+  </div>  
+  </section> 
+  <footer>
+    Johanna <br> Rosenholm 
+  </footer>
+</body>
 </html>
