added some text to textboxes

--- a/code/index.html
+++ b/code/index.html
@@ -36,8 +36,8 @@
   <div class="big-news-box">
     <img src='https://images.pexels.com/photos/3077882/pexels-photo-3077882.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="climb-mountains">
     <div class="text-box-1">
-    <h1>Studies show that climbing reduces stress!</h1>
-    <p>Ut enim ad ullamco laboris nisit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h1>Studies show that climbing reduces stress</h1>
+    <p>New research shows that those who climb feel less stressed in their everyday life. Click to get to the study.</p>
     <button class="button">Read More</button>  
   </div></div>
   </section> 
@@ -46,8 +46,8 @@
   <div class="news-items-box">
       <img src='https://images.pexels.com/photos/8729323/pexels-photo-8729323.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="people">
       <div class="text-box-2">
-      <h2>Climbing in spain</h2>
-      <p>Ut eid est laborum. hueuhuheuuhduehduhed hudheuhduhed. huhe fedee uhduhed hudheuhdue jidejidjied</p>
+      <h2>Climbing in Italy</h2>
+      <p>Are you looking for new climbing adventures? Go to Italy! You will find the best mountains!</p>
     </div>
   </div>
 
@@ -55,8 +55,7 @@
     <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
     <div class="text-box-2">
     <h2>Do you have the right shoe?</h2>
-    <p>>Ut eid est laborum. hueuhuheudhue ihuehd huhdeuhduehd hudhhudhuehduhed hudheuhduhed
-      huhdeuhduhed hudheuhdue jidejidjied</p>
+    <p>Wrong shoes can destoy yor climbing as well as your feet. So, how to find the perfect shoe?</p>
     </div> 
   </div>
 
@@ -64,8 +63,7 @@
     <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
     <div class="text-box-2">
     <h2>Go toprope!</h2>
-    <p>Ut eid est laborum. hueuhuheudhue ihehd huhdeuhduehd hudheuhduhed hudhuehduhed hudheuhduhed
-    huhdeuhduhed hudheuhdue jidejidjied</p>
+    <p>Tired of bouldering and want something new? Go toprope! Here is everything you have to know!</p>
     </div>
   </div>
 
@@ -73,8 +71,7 @@
     <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
     <div class="text-box-2">
     <h2>Scared of heights?</h2>
-    <p>Ut eid est laborum. hueuhuheudhue ihdhehduhue hduehudhuehduehd huhdeuhduehd hudheuhduhed hudhuehduhed hudheuhduhed
-    huhdeuhduhed hudheuhdue jidejidjied</p>
+    <p>Want to climb but scared of heights? Read this intervue about how to overcome your fear.</p>
     </div> 
   </div>  
   </section> 
