added the  css code

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="logo">
       <img src="https://static.thenounproject.com/png/4129058-200.png"/>
-        <h1 class="site">The climbers News</h1>
+        <h1 class="site">Climbers WorldWide</h1>
     </div>
         
     <nav class="navbar">
@@ -44,7 +44,7 @@
 <!-- The other news  -->
   <section class="news-items">
   <div class="news-items-box">
-      <img src='https://images.pexels.com/photos/8729323/pexels-photo-8729323.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="people">
+      <img src='https://images.pexels.com/photos/673018/pexels-photo-673018.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="climb Italy">
       <div class="text-box-2">
       <h2>Climbing in Italy</h2>
       <p>Are you looking for new climbing adventures? Go to Italy! You will find the best mountains!</p>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="news-items-box">
-    <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
+    <img src='https://images.pexels.com/photos/1271816/pexels-photo-1271816.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="feet">
     <div class="text-box-2">
     <h2>Do you have the right shoe?</h2>
     <p>Wrong shoes can destoy yor climbing as well as your feet. So, how to find the perfect shoe?</p>
@@ -60,7 +60,7 @@
   </div>
 
   <div class="news-items-box">
-    <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
+    <img src='https://images.pexels.com/photos/97804/pexels-photo-97804.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="top-rope">
     <div class="text-box-2">
     <h2>Go toprope!</h2>
     <p>Tired of bouldering and want something new? Go toprope! Here is everything you have to know!</p>
@@ -68,7 +68,7 @@
   </div>
 
   <div class="news-items-box">
-    <img src='https://thumbnails.production.thenounproject.com/E0tYiMRqXRsU3api9GQFC8lLCNg=/fit-in/1000x1000/photos.production.thenounproject.com/photos/26AC1D6D-B728-4CC6-8094-A11D1E3B77AA.jpg' alt="people">
+    <img src='https://images.pexels.com/photos/1402295/pexels-photo-1402295.jpeg?auto=compress&cs=tinysrgb&w=1600' alt="fear">
     <div class="text-box-2">
     <h2>Scared of heights?</h2>
     <p>Want to climb but scared of heights? Read this intervue about how to overcome your fear.</p>
