--- a/new code/index.html
+++ b/new code/index.html
@@ -18,8 +18,9 @@
           <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Service</a><a href="#">Portfolio</a
-            ><a href="#">Contact</a>
+            <a href="#">Service</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
           </nav>
         </div>
       </div>
