added my code for the project. Forgot to commit and push to github

--- a/code/index.html
+++ b/code/index.html
@@ -2,23 +2,82 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <div class="topnav">
+          <div class="logo-header-container">
+            <img class="logotype" src="./Images/open-book.png" alt="Logotype">
+            <h1 class="header-h1">The Pink Book Club</h1>
+          </div>
+          <nav>
+            <a href="#Genre">Genre</a>
+            <a href="#top10">Top 10</a>
+            <a href="#Bookreview">Book Reviews</a>
+            <a class="active" href="#home">Home</a>
+            <div class="hamburger-menu">
+              <span class="line"></span>
+              <span class="line"></span>
+              <span class="line"></span>
+            </div>
+          </nav>
+        </div>
+
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="big-news-child-paradise">
+        <img class="big-news-image" src="./Images/Toparadise.webp" alt="Toparadise">
+      </div>
+      <div class="big-news-child-author">
+        <h1 class="big-news-h1">Book of the month</h1>
+        <h2 class="big-news-h2">To Paradise - Hanya Yanagihara</h2>
+        <p class="big-news-p">TO PARADISE is a fin de siecle novel of marvelous literary effect, but above all it is a work of emotional genius. The great power of this remarkable novel is driven by Yanagihara's understanding of the aching desire to protect those we love - partners, lovers, children, friends, family and even our fellow citizens - and the pain that ensues when we cannot. <a href="https://www.adlibris.com/se/bok/to-paradise-9781529077483">Read more about the book.</a></p>
+        <a href="#" class="button">Buy here!</a>
+
+      </div>
+
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <section class="book-section">
+      <h2 class="book-review-h2">Find and read more books you'll love!</h2>
+      <div class="flex-parent">
+        <div class="flex-item"><a href="https://www.adlibris.com/se/bok/obscuritas-9789113102603">
+          <img class="book" src="./Images/obscuritas.jpeg" alt="obscuritas"></a>
+          <span class="caption">David Lagercrantz -<br>Obscuritas</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/32187419-conversations-with-friends?from_search=true&from_srp=true&qid=O5XDE0ZE22&rank=3">
+          <img class="book" src="./Images/conversations-with-friends.jpeg" alt="conversation"></a>
+          <span class="caption">Sally Rooney -<br>Conversation with friends</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/54120408-klara-and-the-sun?ref=nav_sb_ss_1_10">
+          <img class="book" src="./Images/klara-and-the-sun.jpeg" alt="klara"></a>
+          <span class="caption">Kazuo Ishihuro -<br>Klara and the sun</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/34066798-a-gentleman-in-moscow?ref=nav_sb_noss_l_7">
+          <img class="book" src="./Images/a-gentleman-in-moscow.jpeg" alt="gentleman"></a>
+          <span class="caption">Amor Towles -<br>A gentleman<br>in Moscow</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/32620332-the-seven-husbands-of-evelyn-hugo?from_search=true&from_srp=true&qid=rw50IeLlZy&rank=1">
+          <img class="book" src="./Images/evelyn-hugo.jpeg" alt="evelyn"></a>
+          <span class="caption">Taylor Jenkins Reid -<br>The seven husbands<br> of Evelyn Hugo</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/36809135-where-the-crawdads-sing?from_search=true&from_srp=true&qid=LLbnP9OD7L&rank=1">
+          <img class="book" src="./Images/crawdad-sings.jpeg" alt="crawdads"></a>
+          <span class="caption">Delia Owens -<br>Where the crawdads sing</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/35133922-educated?from_search=true&from_srp=true&qid=MQapX9wEiS&rank=1">
+          <img class="book" src="./Images/educated.jpeg" alt="educated"></a>
+          <span class="caption">Tara Westover -<br>Educated</span>
+        </div>
+        <div class="flex-item"><a href="https://www.goodreads.com/book/show/22609358-the-seven-sisters?from_search=true&from_srp=true&qid=bsfWbdrRIn&rank=1">
+          <img class="book" src="./Images/seven-sisters.jpeg" alt="seven-sisters"></a>
+          <span class="caption">Lucinda Riley -<br>The seven sisters</span>
+        </div>
+      </div>
   </body>
 </html>
-
-<button></button>
