--- a/code/index.html
+++ b/code/index.html
@@ -3,39 +3,40 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0" >
-    <title>Project 2: The News Site</title>
+    <title>Woody News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <hover>
+    </hover>
   </head>
   <body>
     <header class="top-heading-parent">
-      <img src="./woody-xl.png" alt="logo of the newspaper">
-      <h1 class="logo-name-child"> WOODY NEWS </h1>
-      <nav class="navigation">
-        <a class="navigation-logo" href="#">
-        <a class="navigation-link" href="#">Home</a>
-        <a class="navigation-link" href="#">World</a>
-        <a class="navigation-link" href="#">Economy</a>
-        <a class="navigation-link" href="#">Culture</a>
-      </nav>
+      <div class="logo-name-child"><img src="./woody-xl.png" alt="logo of the newspaper"></div>
+      <div class="logo-name-child"><h1 class="logo-name-child"> WOODY NEWS </h1></div>
+        <div>    
+          <nav class="navigation">
+            <a class="navigation home" href="#">Home</a>
+            <a class="navigation world" href="#">World</a>
+            <a class="navigation economy" href="#">Economy</a>
+            <a class="navigation culture" href="#">Culture</a>
+          </nav>
+        </div>  
     </header>
 
-    <section class="big-news">
-        <img src="./banana-faces.jpg" alt="Picture of bananas with faces painted">
-        <div class="big-news-text">  
-          <h1> Massive fruit fly invasion! </h1>
-          <h2> West part of Sweden is now preparing for the most intense fruit fly period of the century</h2>
-       </div>
+    <section class="big-news-parent">
+        <div class="big-news"><img src="./banana-faces.jpg" alt="Picture of bananas with faces painted"></div>
+        <div class="big-news"><h1> Massive fruit fly invasion! </h1></div>
+        <div class="big-news"><h2> West part of Sweden is now preparing for the most <br> intense fruit fly period of the century</h2></div>
     </section>
       
     <section class="small-news">
-        <div class="grid-item first-picture"><img src="./flower.png" alt="Flowers"></div>
-        <div class="grid-item first-text">Latest from the flower forcast</div>
-        <div class="grid-item second-picture"><img src="./species.png" alt="New species"></div>
-        <div class="grid-item second-text">New species found in wine cellar</div>
-        <div class="grid-item third-picture"><img src="./popeye.png" alt="Popeye"></div>
-        <div class="grid-item third text">Donald Duck announces collaboration with Popeye!</div>
-        <div class="grid-item forth picture"><img src="./cup.png" alt="Winners cup"></div>
-        <div class="grid-item forth text">The winners of the annual PECK competition </div>
+        <div class="grid-item first"><img src="./flower.png" alt="Flowers"></div>
+        <div class="grid-item first"> <h4>Latest from the flower forcast</h4> </div>
+        <div class="grid-item second"><img src="./species.png" alt="New species"></div>
+        <div class="grid-item second"> <h4>New species found in wine cellar</h4></div>
+        <div class="grid-item third"><img src="./popeye.png" alt="Popeye"></div>
+        <div class="grid-item third"><h4>Donald Duck announces collaboration with Popeye!</h4></div>
+        <div class="grid-item forth"><img src="./cup.png" alt="Winners cup"></div>
+        <div class="grid-item forth"><h4>The winners of the annual PECK competition</h4></div>
     </section>
   </body>
 </html>
