--- a/code/index.html
+++ b/code/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Nature News</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
@@ -16,7 +16,7 @@
 
     <div class="logoandtext">
 
-        <img class="logo" src="./images/logo.png" alt="logotype"/>
+        <img class="logo" src="./images/logo.png" alt="logotype"/>  
         <h1>Nature</h1>
 
     </div>
@@ -32,7 +32,9 @@
     <div class="navbarboxes">
         <h3><a href="#" target="_blank">Gallery</a></h3>
     </div>
+    
     <img class="logo-hidden" src="./images/logo.png" alt="logotype"/>
+
     <div class="navbarboxes">
         <h3><a href="#" target="_blank">Contacts</a></h3>
     </div>
@@ -41,7 +43,7 @@
         <h3><a href="#" target="_blank">About</a></h3>
     </div>
 
-</section>
+</section> 
 
 <!-- Big news and image-->
 
@@ -60,7 +62,7 @@
     </div>
 
 </section>
-
+ 
 
 <!-- the contents of magazine-->
 
@@ -137,6 +139,6 @@
     </div>
 
 </section>
-
+ 
 </body>
 </html>
