--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <img class="logo" src="images/logo.svg" alt="Technigo logo">
         
-        <h1>TravelNews</h1>
+        <h1>TravelNewszz</h1>
       
         <div class="nav-toggle" id="navToggle">
           <img class="navIcon" id="hamburger" src="images/menu.png" alt="hamburger menu">
